--- a/stely.css
+++ b/stely.css
@@ -1,42 +1,48 @@
-﻿.header__worp {
+.header__worp {
     display: flex;
     justify-content: space-between;
     border-radius: 20px;
-     margin-top: 30px;
+    margin-top: 30px;
     background: linear-gradient(to right,#0A2B79,#28345C);
-     align-items: center;
-     height: 110px;
+    align-items: center;
+    height: 110px;
 }
+
 .a__txt {
     text-decoration: none;
     color: #A7B1C2;
     font-size: 16px;
 }
+
 .container {
     margin: 0 auto;
     width: 60%;
     max-width: 1500px;
 }
+
 nav ul {
     list-style: none;
     display: flex;
     gap: 15px;
 }
+
 footer {
     background: linear-gradient(to right,#28345C,#A7B1C2);
     text-align: center;
     padding: 20px 0;
-    border-radius: 20px;
 }
+
 main {
     flex: 1;
 }
+
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
 }
+
 .img__logo {
     width: 102.1px;
     height: 102.1px;
@@ -46,35 +52,44 @@ body {
 ul {
     padding: 10px;
     margin: 0;
+    text-decoration: none;
 }
+
 .hero {
     min-height: 600px;
     background: linear-gradient(to right,#28345C,#A7B1C2)
 }
+
 header {
     background: linear-gradient(to right,#28345C,#A7B1C2)
 }
+
 h2 {
     margin-top: 0;
 }
+
 .hero__h {
     font-size: 70px;
     color: #A7B1C2;
 }
+
 .hero__p {
     font-size: 35px;
     color: #A7B1C2;
 }
-.log__in{
+
+.log__in {
     background-color: #0A2B79;
     border: none;
     color: #A7B1C2;
     padding: 10px 20px;
     border-radius: 10px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 40px;
     margin-top: 20%;
+
 }
+
 .sing__in {
     background-color: #0A2B79;
     border: none;
@@ -82,47 +97,55 @@ h2 {
     padding: 10px 20px;
     border-radius: 10px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 40px;
     margin-top: 20%;
 }
+
 .hero__page {
     display: flex;
     justify-content: space-between;
     flex-direction: row-reverse;
 }
+
 .img__hero {
-    height: 595px;
+    height: 50vh;
     width: auto;
 }
+
 .mdia__icon {
     width: 30px;
     height: 30px;
     margin: 0 10px;
 }
+
 .footer__worp {
     display: flex;
     justify-content: space-between;
     border-radius: 20px;
     justify-content: center;
 }
+
 .a__txt:hover {
     color: #CBDEFF;
     border: 2px solid #CBDEFF;
     border-radius: 20px;
     padding: 5px;
 }
+
 button:hover {
     background-color: #28345C;
     transform: scale(1.03);
     border: 2px solid #A7B1C2;
 }
+
 .img__logo:hover {
     transform: scale(1.03);
 }
+
 .expane__worp {
     display: flex;
-
 }
+
 .explen__imgs {
     display: flex;
     align-content: center;
@@ -131,80 +154,94 @@ button:hover {
     justify-content: center;
     gap: 20px;
 }
+
 .explen__img4 {
     width: 430px;
     height: 340px;
     border: 2px solid black;
     border-radius: 20px;
 }
+
 .expane__txt {
     width: 50%;
 }
+
 .expane__1 {
     background-color: lightgray;
     border: 2px solid black;
     min-height: 70vh;
 }
+
 .explen__img1 {
     width: 430px;
     height: 340px;
     border: 2px solid black;
     border-radius: 20px;
 }
+
 .explen__img2 {
     width: 430px;
     height: 340px;
     border: 2px solid black;
     border-radius: 20px;
 }
+
 .explen__img3 {
     width: 430px;
     height: 340px;
     border: 2px solid black;
     border-radius: 20px;
 }
+
 .explen__img1:hover {
     transform: scale(1.02);
 }
+
 .explen__img2:hover {
     transform: scale(1.02);
 }
+
 .explen__img3:hover {
     transform: scale(1.02);
 }
+
 .explen__img4:hover {
     transform: scale(1.02);
 }
-.expane__p1{
-    font-size: 20px;
-}
-.expane__p2 {
-    font-size: 20px;
 
-}
-.expane__p3 {
-    font-size: 20px;
-}
-
-.expane__txth {
+.expane1__li {
     font-size: 30px;
+    margin-top: 35px;
+    text-decoration: none;
 }
+
+
+.expane__txth{
+    font-size: 40px;
+}
+
+
 
 .expane__h {
     font-size: 40px;
 }
-.mdia__icon{
-    transform: scale(1.02);
+
+.mdia__icon {
     border: 1.5px solid black;
-     border-radius: 50%;
+    border-radius: 50%;
 }
-
-
-
-
-
-
-
-
-
-
+.mdia__icon :hover {
+    transform: scale(1.05);
+    border: 2px solid black;
+    border-radius: 50%;
+}
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 250px;
+}
+.explane__warp {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
