--- a/stely.css
+++ b/stely.css
@@ -222,9 +222,16 @@ footer{
     margin-top: 50px;
 }
 button :paused {
-    transform: scale(1.03);
+    transform: scale(1.05);
 }
-
+button {
+    background-color: #0A2B79;
+    border: none;
+    color: #A7B1C2;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+}
 
 
 
